--- a/Дизайн.css
+++ b/Дизайн.css
@@ -1,4 +1,49 @@
 body {
 background-color: lightgreen;
 }
-</style>
+section {
+width: 45%;
+height: 400px;  
+float:left; 
+border: 3px solid black;
+border-radius: 15px;
+overflow: auto;
+text-align: center;
+}
+section h3 {
+text-align: center;
+}
+section img {
+display: block;
+width: 200px;
+margin: 0 auto;
+}
+.container {
+	padding: 0 15px;
+}
+
+@media (min-width: 575.98px) {
+	.container {
+		max-width: 540px;
+		margin: auto;
+		padding: 0;
+	}
+}
+
+@media (min-width: 767.98px) {
+	.container {
+		max-width: 720px;
+	}
+}
+
+@media (min-width: 991.98px) {
+	.container {
+		max-width: 960px;
+	}
+}
+
+@media (min-width: 1199.98px) {
+	.container {
+		max-width: 1140px;
+	}
+}
